# django-jwt-auth

./: LICENSE  README.rst  setup.cfg
jwt_auth/: admin.py  authenticate.py  decorators.py  exceptions.py  middleware.py  models.py  urls.py  views.py
jwt_auth/migrations/: 0001_initial.py
